--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "langchain-agent-playgrund"
+name = "langchain-agent-playground"
 version = "0.1.0"
 description = ""
-authors = ["koji-ono_exwzd <koji.ono@exwzd.com>"]
+authors = ["0h-n0"]
 readme = "README.md"
-packages = [{include = "langchain_agent_playgrund"}]
+packages = [{include = "langchain_agent_playground"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
